test_suite/tests/compile_fail/unnamed_multiple_fields.rs
use ronky::Exported;

#[derive(Exported)]
enum MultipleFields {
    OhNo(u32, u32),
}

fn main() {}
